draguilator/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT

Grammar

Rule 0     S' -> program
Rule 1     program -> statement
Rule 2     program -> funclist
Rule 3     program -> empty
Rule 4     funclist -> funcdef _funclist
Rule 5     _funclist -> funclist
Rule 6     _funclist -> empty
Rule 7     funcdef -> DEFINE IDENT LPAREN paramlist RPAREN LBRACES statelist RBRACES
Rule 8     paramlist -> INT IDENT _paramlist
Rule 9     paramlist -> FLOAT IDENT _paramlist
Rule 10    paramlist -> STRING IDENT _paramlist
Rule 11    paramlist -> empty
Rule 12    _paramlist -> COMMA paramlist
Rule 13    _paramlist -> empty
Rule 14    statement -> vardecl SEMICOLON
Rule 15    statement -> atribstat SEMICOLON
Rule 16    statement -> printstat SEMICOLON
Rule 17    statement -> readstat SEMICOLON
Rule 18    statement -> returnstat SEMICOLON
Rule 19    statement -> ifstat
Rule 20    statement -> forstat
Rule 21    statement -> LBRACES statelist RBRACES
Rule 22    statement -> BREAK SEMICOLON
Rule 23    statement -> SEMICOLON
Rule 24    vardecl -> INT IDENT vardecl_line
Rule 25    vardecl -> FLOAT IDENT vardecl_line
Rule 26    vardecl -> STRING IDENT vardecl_line
Rule 27    vardecl_line -> LBRACKET INT_CONSTANT RBRACKET vardecl_line
Rule 28    vardecl_line -> empty
Rule 29    atribstat -> lvalue ASSIGN _atribstat
Rule 30    _atribstat -> INT_CONSTANT term_line _expression
Rule 31    _atribstat -> FLOAT_CONSTANT term_line _expression
Rule 32    _atribstat -> STRING_CONSTANT term_line _expression
Rule 33    _atribstat -> NULL term_line _expression
Rule 34    _atribstat -> IDENT __atribstat
Rule 35    _atribstat -> LPAREN numexpression RPAREN term_line _expression
Rule 36    _atribstat -> PLUS _numexpression _expression
Rule 37    _atribstat -> MINUS _numexpression _expression
Rule 38    _atribstat -> _expression
Rule 39    _atribstat -> allocexpression
Rule 40    __atribstat -> lvalue_line term_line _expression
Rule 41    __atribstat -> LPAREN paramlistcall RPAREN
Rule 42    funccall -> IDENT LPAREN paramlistcall RPAREN
Rule 43    paramlistcall -> IDENT _paramlistcall
Rule 44    paramlistcall -> empty
Rule 45    _paramlistcall -> COMMA paramlistcall
Rule 46    _paramlistcall -> empty
Rule 47    printstat -> PRINT expression
Rule 48    readstat -> READ lvalue
Rule 49    returnstat -> RETURN
Rule 50    ifstat -> IF LPAREN expression RPAREN statement _ifstat
Rule 51    _ifstat -> ELSE statement
Rule 52    _ifstat -> empty
Rule 53    forstat -> FOR LPAREN atribstat SEMICOLON expression SEMICOLON atribstat RPAREN statement
Rule 54    statelist -> statement _statelist
Rule 55    _statelist -> statelist
Rule 56    _statelist -> empty
Rule 57    allocexpression -> NEW _allocexpression
Rule 58    _allocexpression -> INT allocexpression_line
Rule 59    _allocexpression -> FLOAT allocexpression_line
Rule 60    _allocexpression -> STRING allocexpression_line
Rule 61    allocexpression_line -> LBRACKET numexpression RBRACKET _allocexpression_line
Rule 62    _allocexpression_line -> allocexpression_line
Rule 63    _allocexpression_line -> empty
Rule 64    expression -> numexpression _expression
Rule 65    _expression -> LESS_THAN numexpression
Rule 66    _expression -> GREATER_THAN numexpression
Rule 67    _expression -> LESS_EQUAL_THAN numexpression
Rule 68    _expression -> GREATER_EQUAL_THAN numexpression
Rule 69    _expression -> EQUAL_TO numexpression
Rule 70    _expression -> NOT_EQUAL_TO numexpression
Rule 71    numexpression -> factor term_line
Rule 72    numexpression -> PLUS _numexpression
Rule 73    numexpression -> MINUS _numexpression
Rule 74    numexpression -> empty
Rule 75    _numexpression -> factor term_line
Rule 76    _numexpression -> term numexpression_line
Rule 77    numexpression_line -> PLUS term numexpression_line
Rule 78    numexpression_line -> MINUS term numexpression_line
Rule 79    numexpression_line -> empty
Rule 80    term -> unaryexpre term_line
Rule 81    term_line -> TIMES unaryexpre term_line
Rule 82    term_line -> DIVIDE unaryexpre term_line
Rule 83    term_line -> MODULO unaryexpre term_line
Rule 84    term_line -> empty
Rule 85    unaryexpre -> factor
Rule 86    unaryexpre -> PLUS factor
Rule 87    unaryexpre -> MINUS factor
Rule 88    factor -> INT_CONSTANT
Rule 89    factor -> FLOAT_CONSTANT
Rule 90    factor -> STRING_CONSTANT
Rule 91    factor -> NULL
Rule 92    factor -> lvalue
Rule 93    factor -> LPAREN numexpression RPAREN
Rule 94    lvalue -> IDENT lvalue_line
Rule 95    lvalue_line -> LBRACKET numexpression RBRACKET lvalue_line
Rule 96    lvalue_line -> empty
Rule 97    empty -> <empty>

Terminals, with rules where they appear

ASSIGN               : 29
BREAK                : 22
COMMA                : 12 45
COMMENT              : 
DEFINE               : 7
DIVIDE               : 82
ELSE                 : 51
EQUAL_TO             : 69
FLOAT                : 9 25 59
FLOAT_CONSTANT       : 31 89
FOR                  : 53
GREATER_EQUAL_THAN   : 68
GREATER_THAN         : 66
IDENT                : 7 8 9 10 24 25 26 34 42 43 94
IF                   : 50
INT                  : 8 24 58
INT_CONSTANT         : 27 30 88
LBRACES              : 7 21
LBRACKET             : 27 61 95
LESS_EQUAL_THAN      : 67
LESS_THAN            : 65
LPAREN               : 7 35 41 42 50 53 93
MINUS                : 37 73 78 87
MODULO               : 83
NEW                  : 57
NOT_EQUAL_TO         : 70
NULL                 : 33 91
PLUS                 : 36 72 77 86
PRINT                : 47
RBRACES              : 7 21
RBRACKET             : 27 61 95
READ                 : 48
RETURN               : 49
RPAREN               : 7 35 41 42 50 53 93
SEMICOLON            : 14 15 16 17 18 22 23 53 53
STRING               : 10 26 60
STRING_CONSTANT      : 32 90
TIMES                : 81
error                : 

Nonterminals, with rules where they appear

__atribstat          : 34
_allocexpression     : 57
_allocexpression_line : 61
_atribstat           : 29
_expression          : 30 31 32 33 35 36 37 38 40 64
_funclist            : 4
_ifstat              : 50
_numexpression       : 36 37 72 73
_paramlist           : 8 9 10
_paramlistcall       : 43
_statelist           : 54
allocexpression      : 39
allocexpression_line : 58 59 60 62
atribstat            : 15 53 53
empty                : 3 6 11 13 28 44 46 52 56 63 74 79 84 96
expression           : 47 50 53
factor               : 71 75 85 86 87
forstat              : 20
funccall             : 
funcdef              : 4
funclist             : 2 5
ifstat               : 19
lvalue               : 29 48 92
lvalue_line          : 40 94 95
numexpression        : 35 61 64 65 66 67 68 69 70 93 95
numexpression_line   : 76 77 78
paramlist            : 7 12
paramlistcall        : 41 42 45
printstat            : 16
program              : 0
readstat             : 17
returnstat           : 18
statelist            : 7 21 55
statement            : 1 50 51 53 54
term                 : 76 77 78
term_line            : 30 31 32 33 35 40 71 75 80 81 82 83
unaryexpre           : 80 81 82 83
vardecl              : 14
vardecl_line         : 24 25 26 27

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement
    (2) program -> . funclist
    (3) program -> . empty
    (14) statement -> . vardecl SEMICOLON
    (15) statement -> . atribstat SEMICOLON
    (16) statement -> . printstat SEMICOLON
    (17) statement -> . readstat SEMICOLON
    (18) statement -> . returnstat SEMICOLON
    (19) statement -> . ifstat
    (20) statement -> . forstat
    (21) statement -> . LBRACES statelist RBRACES
    (22) statement -> . BREAK SEMICOLON
    (23) statement -> . SEMICOLON
    (4) funclist -> . funcdef _funclist
    (97) empty -> .
    (24) vardecl -> . INT IDENT vardecl_line
    (25) vardecl -> . FLOAT IDENT vardecl_line
    (26) vardecl -> . STRING IDENT vardecl_line
    (29) atribstat -> . lvalue ASSIGN _atribstat
    (47) printstat -> . PRINT expression
    (48) readstat -> . READ lvalue
    (49) returnstat -> . RETURN
    (50) ifstat -> . IF LPAREN expression RPAREN statement _ifstat
    (53) forstat -> . FOR LPAREN atribstat SEMICOLON expression SEMICOLON atribstat RPAREN statement
    (7) funcdef -> . DEFINE IDENT LPAREN paramlist RPAREN LBRACES statelist RBRACES
    (94) lvalue -> . IDENT lvalue_line

    LBRACES         shift and go to state 13
    BREAK           shift and go to state 14
    SEMICOLON       shift and go to state 6
    $end            reduce using rule 97 (empty -> .)
    INT             shift and go to state 16
    FLOAT           shift and go to state 18
    STRING          shift and go to state 19
    PRINT           shift and go to state 21
    READ            shift and go to state 22
    RETURN          shift and go to state 23
    IF              shift and go to state 24
    FOR             shift and go to state 25
    DEFINE          shift and go to state 26
    IDENT           shift and go to state 17

    program                        shift and go to state 1
    statement                      shift and go to state 2
    funclist                       shift and go to state 3
    empty                          shift and go to state 4
    vardecl                        shift and go to state 5
    atribstat                      shift and go to state 7
    printstat                      shift and go to state 8
    readstat                       shift and go to state 9
    returnstat                     shift and go to state 10
    ifstat                         shift and go to state 11
    forstat                        shift and go to state 12
    funcdef                        shift and go to state 15
    lvalue                         shift and go to state 20

state 1

    (0) S' -> program .



state 2

    (1) program -> statement .

    $end            reduce using rule 1 (program -> statement .)


state 3

    (2) program -> funclist .

    $end            reduce using rule 2 (program -> funclist .)


state 4

    (3) program -> empty .

    $end            reduce using rule 3 (program -> empty .)


state 5

    (14) statement -> vardecl . SEMICOLON

    SEMICOLON       shift and go to state 27


state 6

    (23) statement -> SEMICOLON .

    $end            reduce using rule 23 (statement -> SEMICOLON .)
    LBRACES         reduce using rule 23 (statement -> SEMICOLON .)
    BREAK           reduce using rule 23 (statement -> SEMICOLON .)
    SEMICOLON       reduce using rule 23 (statement -> SEMICOLON .)
    INT             reduce using rule 23 (statement -> SEMICOLON .)
    FLOAT           reduce using rule 23 (statement -> SEMICOLON .)
    STRING          reduce using rule 23 (statement -> SEMICOLON .)
    PRINT           reduce using rule 23 (statement -> SEMICOLON .)
    READ            reduce using rule 23 (statement -> SEMICOLON .)
    RETURN          reduce using rule 23 (statement -> SEMICOLON .)
    IF              reduce using rule 23 (statement -> SEMICOLON .)
    FOR             reduce using rule 23 (statement -> SEMICOLON .)
    IDENT           reduce using rule 23 (statement -> SEMICOLON .)
    RBRACES         reduce using rule 23 (statement -> SEMICOLON .)
    ELSE            reduce using rule 23 (statement -> SEMICOLON .)


state 7

    (15) statement -> atribstat . SEMICOLON

    SEMICOLON       shift and go to state 28


state 8

    (16) statement -> printstat . SEMICOLON

    SEMICOLON       shift and go to state 29


state 9

    (17) statement -> readstat . SEMICOLON

    SEMICOLON       shift and go to state 30


state 10

    (18) statement -> returnstat . SEMICOLON

    SEMICOLON       shift and go to state 31


state 11

    (19) statement -> ifstat .

    $end            reduce using rule 19 (statement -> ifstat .)
    LBRACES         reduce using rule 19 (statement -> ifstat .)
    BREAK           reduce using rule 19 (statement -> ifstat .)
    SEMICOLON       reduce using rule 19 (statement -> ifstat .)
    INT             reduce using rule 19 (statement -> ifstat .)
    FLOAT           reduce using rule 19 (statement -> ifstat .)
    STRING          reduce using rule 19 (statement -> ifstat .)
    PRINT           reduce using rule 19 (statement -> ifstat .)
    READ            reduce using rule 19 (statement -> ifstat .)
    RETURN          reduce using rule 19 (statement -> ifstat .)
    IF              reduce using rule 19 (statement -> ifstat .)
    FOR             reduce using rule 19 (statement -> ifstat .)
    IDENT           reduce using rule 19 (statement -> ifstat .)
    RBRACES         reduce using rule 19 (statement -> ifstat .)
    ELSE            reduce using rule 19 (statement -> ifstat .)


state 12

    (20) statement -> forstat .

    $end            reduce using rule 20 (statement -> forstat .)
    LBRACES         reduce using rule 20 (statement -> forstat .)
    BREAK           reduce using rule 20 (statement -> forstat .)
    SEMICOLON       reduce using rule 20 (statement -> forstat .)
    INT             reduce using rule 20 (statement -> forstat .)
    FLOAT           reduce using rule 20 (statement -> forstat .)
    STRING          reduce using rule 20 (statement -> forstat .)
    PRINT           reduce using rule 20 (statement -> forstat .)
    READ            reduce using rule 20 (statement -> forstat .)
    RETURN          reduce using rule 20 (statement -> forstat .)
    IF              reduce using rule 20 (statement -> forstat .)
    FOR             reduce using rule 20 (statement -> forstat .)
    IDENT           reduce using rule 20 (statement -> forstat .)
    RBRACES         reduce using rule 20 (statement -> forstat .)
    ELSE            reduce using rule 20 (statement -> forstat .)


state 13

    (21) statement -> LBRACES . statelist RBRACES
    (54) statelist -> . statement _statelist
    (14) statement -> . vardecl SEMICOLON
    (15) statement -> . atribstat SEMICOLON
    (16) statement -> . printstat SEMICOLON
    (17) statement -> . readstat SEMICOLON
    (18) statement -> . returnstat SEMICOLON
    (19) statement -> . ifstat
    (20) statement -> . forstat
    (21) statement -> . LBRACES statelist RBRACES
    (22) statement -> . BREAK SEMICOLON
    (23) statement -> . SEMICOLON
    (24) vardecl -> . INT IDENT vardecl_line
    (25) vardecl -> . FLOAT IDENT vardecl_line
    (26) vardecl -> . STRING IDENT vardecl_line
    (29) atribstat -> . lvalue ASSIGN _atribstat
    (47) printstat -> . PRINT expression
    (48) readstat -> . READ lvalue
    (49) returnstat -> . RETURN
    (50) ifstat -> . IF LPAREN expression RPAREN statement _ifstat
    (53) forstat -> . FOR LPAREN atribstat SEMICOLON expression SEMICOLON atribstat RPAREN statement
    (94) lvalue -> . IDENT lvalue_line

    LBRACES         shift and go to state 13
    BREAK           shift and go to state 14
    SEMICOLON       shift and go to state 6
    INT             shift and go to state 16
    FLOAT           shift and go to state 18
    STRING          shift and go to state 19
    PRINT           shift and go to state 21
    READ            shift and go to state 22
    RETURN          shift and go to state 23
    IF              shift and go to state 24
    FOR             shift and go to state 25
    IDENT           shift and go to state 17

    statelist                      shift and go to state 32
    statement                      shift and go to state 33
    vardecl                        shift and go to state 5
    atribstat                      shift and go to state 7
    printstat                      shift and go to state 8
    readstat                       shift and go to state 9
    returnstat                     shift and go to state 10
    ifstat                         shift and go to state 11
    forstat                        shift and go to state 12
    lvalue                         shift and go to state 20

state 14

    (22) statement -> BREAK . SEMICOLON

    SEMICOLON       shift and go to state 34


state 15

    (4) funclist -> funcdef . _funclist
    (5) _funclist -> . funclist
    (6) _funclist -> . empty
    (4) funclist -> . funcdef _funclist
    (97) empty -> .
    (7) funcdef -> . DEFINE IDENT LPAREN paramlist RPAREN LBRACES statelist RBRACES

    $end            reduce using rule 97 (empty -> .)
    DEFINE          shift and go to state 26

    funcdef                        shift and go to state 15
    _funclist                      shift and go to state 35
    funclist                       shift and go to state 36
    empty                          shift and go to state 37

state 16

    (24) vardecl -> INT . IDENT vardecl_line

    IDENT           shift and go to state 38


state 17

    (94) lvalue -> IDENT . lvalue_line
    (95) lvalue_line -> . LBRACKET numexpression RBRACKET lvalue_line
    (96) lvalue_line -> . empty
    (97) empty -> .

    LBRACKET        shift and go to state 40
    ASSIGN          reduce using rule 97 (empty -> .)
    TIMES           reduce using rule 97 (empty -> .)
    DIVIDE          reduce using rule 97 (empty -> .)
    MODULO          reduce using rule 97 (empty -> .)
    LESS_THAN       reduce using rule 97 (empty -> .)
    GREATER_THAN    reduce using rule 97 (empty -> .)
    LESS_EQUAL_THAN reduce using rule 97 (empty -> .)
    GREATER_EQUAL_THAN reduce using rule 97 (empty -> .)
    EQUAL_TO        reduce using rule 97 (empty -> .)
    NOT_EQUAL_TO    reduce using rule 97 (empty -> .)
    SEMICOLON       reduce using rule 97 (empty -> .)
    RBRACKET        reduce using rule 97 (empty -> .)
    RPAREN          reduce using rule 97 (empty -> .)
    PLUS            reduce using rule 97 (empty -> .)
    MINUS           reduce using rule 97 (empty -> .)

    lvalue_line                    shift and go to state 39
    empty                          shift and go to state 41

state 18

    (25) vardecl -> FLOAT . IDENT vardecl_line

    IDENT           shift and go to state 42


state 19

    (26) vardecl -> STRING . IDENT vardecl_line

    IDENT           shift and go to state 43


state 20

    (29) atribstat -> lvalue . ASSIGN _atribstat

    ASSIGN          shift and go to state 44


state 21

    (47) printstat -> PRINT . expression
    (64) expression -> . numexpression _expression
    (71) numexpression -> . factor term_line
    (72) numexpression -> . PLUS _numexpression
    (73) numexpression -> . MINUS _numexpression
    (74) numexpression -> . empty
    (88) factor -> . INT_CONSTANT
    (89) factor -> . FLOAT_CONSTANT
    (90) factor -> . STRING_CONSTANT
    (91) factor -> . NULL
    (92) factor -> . lvalue
    (93) factor -> . LPAREN numexpression RPAREN
    (97) empty -> .
    (94) lvalue -> . IDENT lvalue_line

    PLUS            shift and go to state 48
    MINUS           shift and go to state 49
    INT_CONSTANT    shift and go to state 51
    FLOAT_CONSTANT  shift and go to state 52
    STRING_CONSTANT shift and go to state 53
    NULL            shift and go to state 54
    LPAREN          shift and go to state 56
    LESS_THAN       reduce using rule 97 (empty -> .)
    GREATER_THAN    reduce using rule 97 (empty -> .)
    LESS_EQUAL_THAN reduce using rule 97 (empty -> .)
    GREATER_EQUAL_THAN reduce using rule 97 (empty -> .)
    EQUAL_TO        reduce using rule 97 (empty -> .)
    NOT_EQUAL_TO    reduce using rule 97 (empty -> .)
    IDENT           shift and go to state 17

    expression                     shift and go to state 45
    numexpression                  shift and go to state 46
    factor                         shift and go to state 47
    empty                          shift and go to state 50
    lvalue                         shift and go to state 55

state 22

    (48) readstat -> READ . lvalue
    (94) lvalue -> . IDENT lvalue_line

    IDENT           shift and go to state 17

    lvalue                         shift and go to state 57

state 23

    (49) returnstat -> RETURN .

    SEMICOLON       reduce using rule 49 (returnstat -> RETURN .)


state 24

    (50) ifstat -> IF . LPAREN expression RPAREN statement _ifstat

    LPAREN          shift and go to state 58


state 25

    (53) forstat -> FOR . LPAREN atribstat SEMICOLON expression SEMICOLON atribstat RPAREN statement

    LPAREN          shift and go to state 59


state 26

    (7) funcdef -> DEFINE . IDENT LPAREN paramlist RPAREN LBRACES statelist RBRACES

    IDENT           shift and go to state 60


state 27

    (14) statement -> vardecl SEMICOLON .

    $end            reduce using rule 14 (statement -> vardecl SEMICOLON .)
    LBRACES         reduce using rule 14 (statement -> vardecl SEMICOLON .)
    BREAK           reduce using rule 14 (statement -> vardecl SEMICOLON .)
    SEMICOLON       reduce using rule 14 (statement -> vardecl SEMICOLON .)
    INT             reduce using rule 14 (statement -> vardecl SEMICOLON .)
    FLOAT           reduce using rule 14 (statement -> vardecl SEMICOLON .)
    STRING          reduce using rule 14 (statement -> vardecl SEMICOLON .)
    PRINT           reduce using rule 14 (statement -> vardecl SEMICOLON .)
    READ            reduce using rule 14 (statement -> vardecl SEMICOLON .)
    RETURN          reduce using rule 14 (statement -> vardecl SEMICOLON .)
    IF              reduce using rule 14 (statement -> vardecl SEMICOLON .)
    FOR             reduce using rule 14 (statement -> vardecl SEMICOLON .)
    IDENT           reduce using rule 14 (statement -> vardecl SEMICOLON .)
    RBRACES         reduce using rule 14 (statement -> vardecl SEMICOLON .)
    ELSE            reduce using rule 14 (statement -> vardecl SEMICOLON .)


state 28

    (15) statement -> atribstat SEMICOLON .

    $end            reduce using rule 15 (statement -> atribstat SEMICOLON .)
    LBRACES         reduce using rule 15 (statement -> atribstat SEMICOLON .)
    BREAK           reduce using rule 15 (statement -> atribstat SEMICOLON .)
    SEMICOLON       reduce using rule 15 (statement -> atribstat SEMICOLON .)
    INT             reduce using rule 15 (statement -> atribstat SEMICOLON .)
    FLOAT           reduce using rule 15 (statement -> atribstat SEMICOLON .)
    STRING          reduce using rule 15 (statement -> atribstat SEMICOLON .)
    PRINT           reduce using rule 15 (statement -> atribstat SEMICOLON .)
    READ            reduce using rule 15 (statement -> atribstat SEMICOLON .)
    RETURN          reduce using rule 15 (statement -> atribstat SEMICOLON .)
    IF              reduce using rule 15 (statement -> atribstat SEMICOLON .)
    FOR             reduce using rule 15 (statement -> atribstat SEMICOLON .)
    IDENT           reduce using rule 15 (statement -> atribstat SEMICOLON .)
    RBRACES         reduce using rule 15 (statement -> atribstat SEMICOLON .)
    ELSE            reduce using rule 15 (statement -> atribstat SEMICOLON .)


state 29

    (16) statement -> printstat SEMICOLON .

    $end            reduce using rule 16 (statement -> printstat SEMICOLON .)
    LBRACES         reduce using rule 16 (statement -> printstat SEMICOLON .)
    BREAK           reduce using rule 16 (statement -> printstat SEMICOLON .)
    SEMICOLON       reduce using rule 16 (statement -> printstat SEMICOLON .)
    INT             reduce using rule 16 (statement -> printstat SEMICOLON .)
    FLOAT           reduce using rule 16 (statement -> printstat SEMICOLON .)
    STRING          reduce using rule 16 (statement -> printstat SEMICOLON .)
    PRINT           reduce using rule 16 (statement -> printstat SEMICOLON .)
    READ            reduce using rule 16 (statement -> printstat SEMICOLON .)
    RETURN          reduce using rule 16 (statement -> printstat SEMICOLON .)
    IF              reduce using rule 16 (statement -> printstat SEMICOLON .)
    FOR             reduce using rule 16 (statement -> printstat SEMICOLON .)
    IDENT           reduce using rule 16 (statement -> printstat SEMICOLON .)
    RBRACES         reduce using rule 16 (statement -> printstat SEMICOLON .)
    ELSE            reduce using rule 16 (statement -> printstat SEMICOLON .)


state 30

    (17) statement -> readstat SEMICOLON .

    $end            reduce using rule 17 (statement -> readstat SEMICOLON .)
    LBRACES         reduce using rule 17 (statement -> readstat SEMICOLON .)
    BREAK           reduce using rule 17 (statement -> readstat SEMICOLON .)
    SEMICOLON       reduce using rule 17 (statement -> readstat SEMICOLON .)
    INT             reduce using rule 17 (statement -> readstat SEMICOLON .)
    FLOAT           reduce using rule 17 (statement -> readstat SEMICOLON .)
    STRING          reduce using rule 17 (statement -> readstat SEMICOLON .)
    PRINT           reduce using rule 17 (statement -> readstat SEMICOLON .)
    READ            reduce using rule 17 (statement -> readstat SEMICOLON .)
    RETURN          reduce using rule 17 (statement -> readstat SEMICOLON .)
    IF              reduce using rule 17 (statement -> readstat SEMICOLON .)
    FOR             reduce using rule 17 (statement -> readstat SEMICOLON .)
    IDENT           reduce using rule 17 (statement -> readstat SEMICOLON .)
    RBRACES         reduce using rule 17 (statement -> readstat SEMICOLON .)
    ELSE            reduce using rule 17 (statement -> readstat SEMICOLON .)


state 31

    (18) statement -> returnstat SEMICOLON .

    $end            reduce using rule 18 (statement -> returnstat SEMICOLON .)
    LBRACES         reduce using rule 18 (statement -> returnstat SEMICOLON .)
    BREAK           reduce using rule 18 (statement -> returnstat SEMICOLON .)
    SEMICOLON       reduce using rule 18 (statement -> returnstat SEMICOLON .)
    INT             reduce using rule 18 (statement -> returnstat SEMICOLON .)
    FLOAT           reduce using rule 18 (statement -> returnstat SEMICOLON .)
    STRING          reduce using rule 18 (statement -> returnstat SEMICOLON .)
    PRINT           reduce using rule 18 (statement -> returnstat SEMICOLON .)
    READ            reduce using rule 18 (statement -> returnstat SEMICOLON .)
    RETURN          reduce using rule 18 (statement -> returnstat SEMICOLON .)
    IF              reduce using rule 18 (statement -> returnstat SEMICOLON .)
    FOR             reduce using rule 18 (statement -> returnstat SEMICOLON .)
    IDENT           reduce using rule 18 (statement -> returnstat SEMICOLON .)
    RBRACES         reduce using rule 18 (statement -> returnstat SEMICOLON .)
    ELSE            reduce using rule 18 (statement -> returnstat SEMICOLON .)


state 32

    (21) statement -> LBRACES statelist . RBRACES

    RBRACES         shift and go to state 61


state 33

    (54) statelist -> statement . _statelist
    (55) _statelist -> . statelist
    (56) _statelist -> . empty
    (54) statelist -> . statement _statelist
    (97) empty -> .
    (14) statement -> . vardecl SEMICOLON
    (15) statement -> . atribstat SEMICOLON
    (16) statement -> . printstat SEMICOLON
    (17) statement -> . readstat SEMICOLON
    (18) statement -> . returnstat SEMICOLON
    (19) statement -> . ifstat
    (20) statement -> . forstat
    (21) statement -> . LBRACES statelist RBRACES
    (22) statement -> . BREAK SEMICOLON
    (23) statement -> . SEMICOLON
    (24) vardecl -> . INT IDENT vardecl_line
    (25) vardecl -> . FLOAT IDENT vardecl_line
    (26) vardecl -> . STRING IDENT vardecl_line
    (29) atribstat -> . lvalue ASSIGN _atribstat
    (47) printstat -> . PRINT expression
    (48) readstat -> . READ lvalue
    (49) returnstat -> . RETURN
    (50) ifstat -> . IF LPAREN expression RPAREN statement _ifstat
    (53) forstat -> . FOR LPAREN atribstat SEMICOLON expression SEMICOLON atribstat RPAREN statement
    (94) lvalue -> . IDENT lvalue_line

    RBRACES         reduce using rule 97 (empty -> .)
    LBRACES         shift and go to state 13
    BREAK           shift and go to state 14
    SEMICOLON       shift and go to state 6
    INT             shift and go to state 16
    FLOAT           shift and go to state 18
    STRING          shift and go to state 19
    PRINT           shift and go to state 21
    READ            shift and go to state 22
    RETURN          shift and go to state 23
    IF              shift and go to state 24
    FOR             shift and go to state 25
    IDENT           shift and go to state 17

    statement                      shift and go to state 33
    _statelist                     shift and go to state 62
    statelist                      shift and go to state 63
    empty                          shift and go to state 64
    vardecl                        shift and go to state 5
    atribstat                      shift and go to state 7
    printstat                      shift and go to state 8
    readstat                       shift and go to state 9
    returnstat                     shift and go to state 10
    ifstat                         shift and go to state 11
    forstat                        shift and go to state 12
    lvalue                         shift and go to state 20

state 34

    (22) statement -> BREAK SEMICOLON .

    $end            reduce using rule 22 (statement -> BREAK SEMICOLON .)
    LBRACES         reduce using rule 22 (statement -> BREAK SEMICOLON .)
    BREAK           reduce using rule 22 (statement -> BREAK SEMICOLON .)
    SEMICOLON       reduce using rule 22 (statement -> BREAK SEMICOLON .)
    INT             reduce using rule 22 (statement -> BREAK SEMICOLON .)
    FLOAT           reduce using rule 22 (statement -> BREAK SEMICOLON .)
    STRING          reduce using rule 22 (statement -> BREAK SEMICOLON .)
    PRINT           reduce using rule 22 (statement -> BREAK SEMICOLON .)
    READ            reduce using rule 22 (statement -> BREAK SEMICOLON .)
    RETURN          reduce using rule 22 (statement -> BREAK SEMICOLON .)
    IF              reduce using rule 22 (statement -> BREAK SEMICOLON .)
    FOR             reduce using rule 22 (statement -> BREAK SEMICOLON .)
    IDENT           reduce using rule 22 (statement -> BREAK SEMICOLON .)
    RBRACES         reduce using rule 22 (statement -> BREAK SEMICOLON .)
    ELSE            reduce using rule 22 (statement -> BREAK SEMICOLON .)


state 35

    (4) funclist -> funcdef _funclist .

    $end            reduce using rule 4 (funclist -> funcdef _funclist .)


state 36

    (5) _funclist -> funclist .

    $end            reduce using rule 5 (_funclist -> funclist .)


state 37

    (6) _funclist -> empty .

    $end            reduce using rule 6 (_funclist -> empty .)


state 38

    (24) vardecl -> INT IDENT . vardecl_line
    (27) vardecl_line -> . LBRACKET INT_CONSTANT RBRACKET vardecl_line
    (28) vardecl_line -> . empty
    (97) empty -> .

    LBRACKET        shift and go to state 66
    SEMICOLON       reduce using rule 97 (empty -> .)

    vardecl_line                   shift and go to state 65
    empty                          shift and go to state 67

state 39

    (94) lvalue -> IDENT lvalue_line .

    ASSIGN          reduce using rule 94 (lvalue -> IDENT lvalue_line .)
    TIMES           reduce using rule 94 (lvalue -> IDENT lvalue_line .)
    DIVIDE          reduce using rule 94 (lvalue -> IDENT lvalue_line .)
    MODULO          reduce using rule 94 (lvalue -> IDENT lvalue_line .)
    LESS_THAN       reduce using rule 94 (lvalue -> IDENT lvalue_line .)
    GREATER_THAN    reduce using rule 94 (lvalue -> IDENT lvalue_line .)
    LESS_EQUAL_THAN reduce using rule 94 (lvalue -> IDENT lvalue_line .)
    GREATER_EQUAL_THAN reduce using rule 94 (lvalue -> IDENT lvalue_line .)
    EQUAL_TO        reduce using rule 94 (lvalue -> IDENT lvalue_line .)
    NOT_EQUAL_TO    reduce using rule 94 (lvalue -> IDENT lvalue_line .)
    SEMICOLON       reduce using rule 94 (lvalue -> IDENT lvalue_line .)
    RBRACKET        reduce using rule 94 (lvalue -> IDENT lvalue_line .)
    RPAREN          reduce using rule 94 (lvalue -> IDENT lvalue_line .)
    PLUS            reduce using rule 94 (lvalue -> IDENT lvalue_line .)
    MINUS           reduce using rule 94 (lvalue -> IDENT lvalue_line .)


state 40

    (95) lvalue_line -> LBRACKET . numexpression RBRACKET lvalue_line
    (71) numexpression -> . factor term_line
    (72) numexpression -> . PLUS _numexpression
    (73) numexpression -> . MINUS _numexpression
    (74) numexpression -> . empty
    (88) factor -> . INT_CONSTANT
    (89) factor -> . FLOAT_CONSTANT
    (90) factor -> . STRING_CONSTANT
    (91) factor -> . NULL
    (92) factor -> . lvalue
    (93) factor -> . LPAREN numexpression RPAREN
    (97) empty -> .
    (94) lvalue -> . IDENT lvalue_line

    PLUS            shift and go to state 48
    MINUS           shift and go to state 49
    INT_CONSTANT    shift and go to state 51
    FLOAT_CONSTANT  shift and go to state 52
    STRING_CONSTANT shift and go to state 53
    NULL            shift and go to state 54
    LPAREN          shift and go to state 56
    RBRACKET        reduce using rule 97 (empty -> .)
    IDENT           shift and go to state 17

    numexpression                  shift and go to state 68
    factor                         shift and go to state 47
    empty                          shift and go to state 50
    lvalue                         shift and go to state 55

state 41

    (96) lvalue_line -> empty .
